--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.5",
     "@vue/cli-service": "^3.1.4",
@@ -26,6 +28,7 @@
     "babel-plugin-component": "^1.1.1",
     "electron": "^7.1.7",
     "eslint-plugin-vue": "^5.0.0-0",
+    "husky": "^5.2.0",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-axios": "^0.0.4",
@@ -58,5 +61,10 @@
     "last 2 versions",
     "not ie <= 8"
   ],
-  "vuePlugins": {}
+  "vuePlugins": {},
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  }
 }
