--- a/package.json
+++ b/package.json
@@ -1,70 +1,27 @@
 {
-  "name": "my-assistant-admin",
-  "version": "0.1.0",
-  "private": true,
-  "main": "main.js",
-  "scripts": {
-    "start": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "start:app": "electron ."
-  },
-  "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "element-ui": "^2.4.10",
-    "eslint": "^5.10.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.5",
-    "@vue/cli-service": "^3.1.4",
-    "axios": "^0.18.0",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-component": "^1.1.1",
-    "electron": "^7.1.7",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "husky": "^5.2.0",
-    "node-sass": "^4.10.0",
-    "sass-loader": "^7.1.0",
-    "vue-cli-plugin-axios": "^0.0.4",
-    "vue-cli-plugin-element": "^1.0.0",
-    "vue-template-compiler": "^2.5.17"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {
-      "no-console": "off"
-    },
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+  "name": "@geektech/eslint-plugin",
+  "version": "0.0.2",
+  "description": "geektech config for eslint",
+  "keywords": [
+    "eslint",
+    "eslint-config",
+    "eslint-config-vue",
+    "geektech"
   ],
-  "vuePlugins": {},
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+  "author": "geektech",
+  "license": "MIT",
+  "repository": {
+    "type": "git"
+  },
+  "main": "lib/index.js",
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-vue": "^9.1.0"
+  },
+  "peerDependencies": {
+    "eslint": ">= 7"
   }
 }
