feat(global): change readme

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@geektech/eslint-plugin",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "geektech config for eslint",
   "keywords": [
     "eslint",
-    "eslint-config",
-    "eslint-config-vue",
+    "eslint-plugin",
+    "eslint-plugin-vue",
     "geektech"
   ],
   "author": "geektech",
@@ -19,7 +19,9 @@
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-vue": "^9.1.0"
+    "eslint-plugin-vue": "^9.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0"
   },
   "peerDependencies": {
     "eslint": ">= 7"
