fix(module): add promise

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geektech/eslint-plugin",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "geektech config for eslint",
   "keywords": [
     "eslint",
@@ -19,9 +19,10 @@
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-vue": "^9.1.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-vue": "^9.1.0"
   },
   "peerDependencies": {
     "eslint": ">= 7"
