--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "test": "mocha tests/lib/rules"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.1.0"
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.16.1"
   },
   "devDependencies": {
-    "eslint": "^8.18.0",
+    "typescript": "^5.1.6",
+    "eslint": "^8.36.0",
     "mocha": "^10.0.0"
   }
 }
