--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geektech/eslint-plugin",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "geektech config for eslint",
   "keywords": [
     "eslint",
@@ -23,13 +23,14 @@
     "@typescript-eslint/parser": "^6.2.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-vue": "^9.16.1"
   },
   "devDependencies": {
-    "typescript": "^5.1.6",
     "eslint": "^8.36.0",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "typescript": "^5.1.6"
   }
 }
